--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "root": true,
     "extends": [
+        "airbnb",
         "plugin:react/recommended",
         "plugin:import/warnings",
         "plugin:jsx-a11y/strict",
